# lazy-wvm-core

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  napi.yml  test.yml
crates/evm/: Cargo.toml  lib.rs  miscalleneous.rs
js/napi/: .gitignore  Cargo.toml  index.d.ts  index.js  napi.test.ts  package.json  pnpm-lock.yaml  tsconfig.json
js/napi/lib/: context.ts  executor.ts  index.ts
js/napi/lib/common/: call.ts  contractFetcher.ts  index.ts
js/napi/npm/darwin-arm64/: README.md  package.json
js/napi/npm/darwin-x64/: README.md  package.json
js/napi/npm/linux-x64-gnu/: README.md  package.json
js/napi/npm/win32-x64-msvc/: README.md  package.json
js/napi/src/: lib.rs  napi_evm_account.rs  napi_evm_calldata.rs  napi_evm_config.rs  napi_evm_opts.rs  napi_evm_vicinity.rs  napi_fork_config.rs  napi_memory_account.rs
